--- a/article1.html
+++ b/article1.html
@@ -1,2 +1,16 @@
 <html>
+    <head>
+        <title>Article</title>
+    </head>
+    <body>
+        <div>
+            <a href="/">home</a>
+        </div>
+        <br/>
+        <h3>Article one</h3>
+        <div> Sept 2 ,2017</div>
+        <div>
+            <p>This is content for my first article </p>
+        </div>
+    </body>
 </html>
