--- a/wishes.html
+++ b/wishes.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <center><img src="http://bestanimations.com/Holidays/Birthday/else-frozen-makes-magic-happy-birthday-animated-greeting-card-gif.gif" width="500" height="500"></center>
-<center><img src="http://logos.textgiraffe.com/logos/logo-name/Vinita-designstyle-love-panda-m.png"></center>
+<center><img src="https://logos.textgiraffe.com/logos/logo-name/3873242-designstyle-bear-m.png"></center>
 <a href="https://www.facebook.com/pavan.krishna.982845">link</a>
 </body>
 </html>	
