[imad-console] Updates wishes1.html

--- a/wishes1.html
+++ b/wishes1.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <video>
-<source src="imad-app/Video_20170902222836629_by_videoshow (1).mp4";
+<source src="imad-app/Video_20170902222836629_by_videoshow (1).mp4">;
 </video>
 </body>
 </html>
