--- a/wishes1.html
+++ b/wishes1.html
@@ -1,10 +1,8 @@
 <html>
 <body>
 <video width="320" height="240" controls>
-<source src="Video_20170902222836629_by_videoshow (1).mp4" type="video/mp4">;
+<source src="https://github.com/PavanKrishna95423/imad-app/blob/master/Video_20170902222836629_by_videoshow%20(1).mp4" type="video/mp4">;
 </video>
-<iframe width="420" height="315"
-src="https://www.youtube.com/embed/XGSy3_Czz8k">
-</iframe>
+
 </body>
 </html>
