--- a/wishes1.html
+++ b/wishes1.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-<video width="320" height="240" controls>
-<source src="https://github.com/PavanKrishna95423/imad-app/blob/master/Video_20170902222836629_by_videoshow%20(1).mp4" type="video/mp4">;
-</video>
+<iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=NE1IrFqUwSI&feature=youtu.be">
+</iframe>
 
 </body>
 </html>
