--- a/wishes1.html
+++ b/wishes1.html
@@ -1,7 +1,6 @@
 <html>
 <body>
-<iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=NE1IrFqUwSI&feature=youtu.be">
+<iframe width="420" height="315" src="https://www.youtube.com/watch?v=NE1IrFqUwSI&feature=youtu.be">
 </iframe>
 
 </body>
