[imad-console] Updates wishes1.html

--- a/wishes1.html
+++ b/wishes1.html
@@ -1,7 +1,10 @@
 <html>
 <body>
-<iframe width="420" height="315" src="https://www.youtube.com/watch?v=NE1IrFqUwSI&feature=youtu.be">
-</iframe>
+<video width="400" controls>
+  <source src="Video_20170902222836629_by_videoshow (1).mp4" type="video/mp4">
+  Your browser does not support HTML5 video.
+</video>
+
 
 </body>
 </html>
