--- a/wishes1.html
+++ b/wishes1.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <video width="400" controls>
-  <source src="Video_20170902222836629_by_videoshow(1).mp4" type="video/mp4">
+  <source src="video.mp4" type="video/mp4">
 </video>
 
 
