--- a/wishes1.html
+++ b/wishes1.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<video width="400" controls>
+<video width="900" height="900" controls>
   <source src="video.mp4" type="video/mp4">
 </video>
 
