[imad-console] Updates wishes.html

--- a/wishes.html
+++ b/wishes.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <center><img src="http://bestanimations.com/Holidays/Birthday/else-frozen-makes-magic-happy-birthday-animated-greeting-card-gif.gif" width="500" height="500"></center>
-<center><img src="https://logos.textgiraffe.com/logos/logo-name/3873242-designstyle-bear-m.png"></center>
-<a href="http://pavan2256577krishna.imad.hasura-app.io/wishes1.html">link</a>
+
+<a href="http://pavan2256577krishna.imad.hasura-app.io/wishes1.html"><center><img src="https://logos.textgiraffe.com/logos/logo-name/3873242-designstyle-bear-m.png"></center></a>
 </body>
 </html>	
